--- a/Mobile Site Report.css
+++ b/Mobile Site Report.css
@@ -17,6 +17,16 @@ body {
 nav{
     display:none;
 }
+
+.top-footer{
+    display:none;
+}
+/*Asigns a colour and a height, height is needed otherwise doesnt draw onto the grid*/
+.mobile_top {
+    grid-area:mobile_top;
+    background-color:#5A2E2E;
+    height:25vh; 
+}
 /*Opens the navigation menu over the top of site,
 sets background colour, centres and adds centres the text to the middle of the screen to make it easier to click*/
 nav:target {
@@ -49,4 +59,44 @@ nav:target {
     top: 2.5em;
     border-top: 0.5em solid white;
     display:block;
+}
+
+main {
+    grid-area: main;
+    padding-top: 2em;
+    padding-left:2em;
+    text-align: left;
+}
+.main-2 {
+    grid-area: main-2;
+    padding-top: 2em;
+    padding-left:2em;
+    text-align: left;
+}
+
+.main-3 {
+    grid-area: main-3;
+    padding-top: 2em;
+    padding-left:2em;
+    text-align: left;
+}
+
+.main-4 {
+    grid-area: main-4;
+    padding-top: 2em;
+    padding-left:2em;
+    text-align: left;
+}
+.main-5 {
+    grid-area: main-5;
+    padding-top: 2em;
+    padding-left:2em;
+    text-align: left;
+}
+
+.main-6 {
+    grid-area: main-6;
+    padding-top: 2em;
+    padding-left:2em;
+    text-align: left;
 }
